# armadarr

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml  release-please-config.json  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release-please.yml  tests.yml  validate.yml
blueprints/: README.md
blueprints/script/armadarr/: add_artist.yaml  add_author.yaml  add_movie.yaml  add_series.yaml  lookup_artist.yaml  lookup_author.yaml  lookup_movie.yaml  lookup_series.yaml  refresh_profiles.yaml
config/: configuration.yaml
custom_components/armadarr/: __init__.py  api_helpers.py  binary_sensor.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json  parsers.py  sensor.py  sensor_descriptions.py  services.py  services.yaml
custom_components/armadarr/services/: __init__.py  handlers.py  parsers.py  schemas.py
custom_components/armadarr/translations/: en.json
scripts/: develop  lint  setup
tests/: __init__.py  conftest.py  test_config_flow.py  test_init.py
